lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-lb
spec:
  type: LoadBalancer 
  selector:
    node: service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
