nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
spec:
  selector:
    app: shopping-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
